--- a/styles/control_center.scss
+++ b/styles/control_center.scss
@@ -54,50 +54,64 @@
         color: $error;
     }
 
-    // Record dropdown styling  
-    .record-dropdown dropdown {
-        min-width: 120px;
-
+    .record-dropdown {
         button {
             all: unset;
-            color: $onSurface;
-            background-color: $surfaceContainer;
-            border-radius: 0.5rem;
-            padding: 0.75rem 1.25rem;
+            color: $onSurfaceVariant;
             font-size: 0.9rem;
-            transition: all 0.2s ease;
-
-            &:hover {
-                background-color: $surfaceContainerHigh;
-            }
         }
-
-        popover {
-            background-color: $surfaceContainer;
-            border-radius: 0.5rem;
-            padding: 0.75rem;
-
-            contents modelbutton {
-                all: unset;
-                padding: 1rem 1.5rem;
-                border-radius: 0.25rem;
-                color: $onSurface;
-                margin: 0.2rem 0;
-                font-size: 0.9rem;
-
-                &:hover {
-                    background-color: $primary;
-                    color: $onPrimary;
-                }
-
-                &:active {
-                    background-color: $primary;
-                    color: $onPrimary;
-                }
-            }
+    }
+    .record-dropdown-m {
+        button {
+            // all: unset;
+            background-color: $primary;
+            color: $onPrimary;
+            font-size: 0.9rem;
         }
     }
 
+    // Record dropdown styling
+    // .record-dropdown dropdown {
+    //     min-width: 120px;
+    //
+    //     button {
+    //         color: $onSurface;
+    //         background-color: $surfaceContainer;
+    //         border-radius: 0.5rem;
+    //         padding: 0.75rem 1.25rem;
+    //         font-size: 0.9rem;
+    //         transition: all 0.2s ease;
+    //
+    //         &:hover {
+    //             background-color: $surfaceContainerHigh;
+    //         }
+    //     }
+    //
+    //     popover {
+    //         background-color: $surfaceContainer;
+    //         border-radius: 0.5rem;
+    //         padding: 0.75rem;
+    //
+    //         contents modelbutton {
+    //             padding: 1rem 1.5rem;
+    //             border-radius: 0.25rem;
+    //             color: $onSurface;
+    //             margin: 0.2rem 0;
+    //             font-size: 0.9rem;
+    //
+    //             &:hover {
+    //                 background-color: $primary;
+    //                 color: $onPrimary;
+    //             }
+    //
+    //             &:active {
+    //                 background-color: $primary;
+    //                 color: $onPrimary;
+    //             }
+    //         }
+    //     }
+    // }
+    //
     .record-cancel-button,
     .record-start-button,
     .record-pause-button,
