--- a/main.scss
+++ b/main.scss
@@ -142,3 +142,10 @@ filechooser {
         }
     }
 }
+.movable-datetime {
+    font-size: 15rem;
+    font-weight: bold;
+    opacity: 0.8;
+    color: $onSurface;
+    font-family: "SF Pro Rounded";
+}
