--- a/styles/workspaces.scss
+++ b/styles/workspaces.scss
@@ -11,6 +11,7 @@
     all: unset;
     @include hover($secondary_paletteKeyColor);
     background-color: $primaryContainer;
+    color: $onPrimaryContainer;
 
     border-radius: 1rem;
     margin: 0 0.25rem;
