feat(single_instance_manager): optimize?

--- a/styles/bar.scss
+++ b/styles/bar.scss
@@ -186,9 +186,9 @@ popover.menu {
 .ram-icon,
 .media-icon-s {
     @if $darkmode == true {
-        color: $onSurface;
+        color: black;
     } @else {
-        color: $inverseOnSurface;
+        color: white;
     }
     font-family: "JetBrainsMono Nerd Font", monospace;
     font-size: 0.8rem;
